# Danmuji

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  config.json  package-lock.json  rust-toolchain.toml
.github/workflows/: rust-test.yml
frontend/: .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/assets/icons/: browserconfig.xml  site.webmanifest
frontend/src/: App.jsx  App.tsx  Config.tsx  Live.tsx  Login.tsx  main.jsx  main.tsx  tailwind.css
frontend/src/apis/: api.ts  login.jsx  login.ts
frontend/src/bindings/: BiliMessage.ts  DanmuMessage.ts  DanmujiApiResponse.ts  GiftMessage.ts  GiftThankConfig.ts  GuardType.ts  Medal.ts  QrCode.ts  room.ts  user.ts
frontend/src/components/: Danmu.tsx  Gift.tsx  GiftSettingsPanel.tsx  Message.jsx  Message.tsx  MessageConfigPanel.tsx  MessageList.jsx  MessageList.tsx  RoomInfoPanel.tsx
frontend/src/components/svg/: loading.tsx
frontend/src/utils/: date_format.ts
src/: config.rs  cors.rs  error.rs  main.rs  monitor.rs  response.rs  util.rs
src/apis/: mod.rs  room.rs  settings.rs  user.rs  ws.rs
src/client/: biliclient.rs  common.rs  message.rs  mod.rs
src/core/: client.rs  danmuji_core.rs  message.rs  mod.rs
src/plugins/: chatbot.rs  executor.rs  gift_thanker.rs  mod.rs
src/plugins/chatbot/: context.rs  mod.rs
src/sender/: mod.rs
