[package]
name = "Danmuji"
version = "0.1.0"
edition = "2021"
authors = ["Yangchen Ye <yye02@email.wm.edu>"]
description = "Bilibili Danmuji written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
serde_json = "1.0.81"
rand = "0.8.5"
websocket = "0.26.4"
byteorder = "1"
flate2 = "1.0"
derive-getters = "0.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tower = "0.4.12" 
futures = "0.3.21"

[dependencies.axum]
version = "0.5.6"
features = ["ws"]

[dependencies.serde]
version = "1.0.37"
features = ["derive"]

[dependencies.hyper]
version = "0.14.17"
features = ["full"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]