[package]
name = "Danmuji"
version = "0.1.0"
homepage = "https://github.com/YangchenYe323/Danmuji"
repository = "https://github.com/YangchenYe323/Danmuji"
edition = "2021"
license = "MIT"
authors = ["Yangchen Ye <yye02@email.wm.edu>"]
description = "Bilibili Danmuji written in Rust"
keywords = ["web", "server", "tool"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
serde_json = "1.0.81"
serde_repr = "0.1"
rand = "0.8.5"
byteorder = "1"
flate2 = "1.0"
derive-getters = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4.12" 
futures = "0.3.21"
ts-rs = "6.1"
lazy_static = "1.4.0"
tokio-tungstenite = "*"
futures-channel = "0.3"
async-openai = "0.9.4"

[dependencies.axum]
version = "0.6.1"
features = ["ws"]

[dependencies.axum-extra]
version = "0.7.0"

[dependencies.axum-macros]
version = "0.3.0"

[dependencies.serde]
version = "1.0.150"
features = ["derive"]

[dependencies.hyper]
version = "0.14.17"
features = ["full"]

[dependencies.tower-http]
version = "0.4.0"
features = ["cors", "fs"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]

[dependencies.tinytemplate]
version = "1.2.1"